html skeleton with ids

--- a/assets/movies.html
+++ b/assets/movies.html
@@ -32,7 +32,7 @@
                     <h3>By Movie</h3>
                 </div>
                 <div class="row justify-content-md-center">
-                    <input type="text" placeholder="Movie Title"> </input>
+                    <input id="title" type="text" placeholder="Movie Title"> </input>
                 </div>
             </div>
             <div class = "col-md-2"></div>
@@ -41,7 +41,7 @@
                         <h3>By location </h3>
                     </div>
                     <div class="row justify-content-md-center">
-                        <input type="number" placeholder="zip code"> </input>
+                        <input id="zipcode" type="number" placeholder="zip code"> </input>
                     </div>
                 </div>
         </div>
