--- a/assets/index.html
+++ b/assets/index.html
@@ -24,7 +24,7 @@
     <!-- content box -->
 
         <div class="row justify-content-md-center">
-            <input type="date"> </input>
+            <input id="date" type="date"> </input>
         </div>
         <div class="row justify-content-md-center">
             <div class="col-md-offset-1 col-md-auto">
@@ -32,7 +32,7 @@
                     <h3>What time does the date start?</h3>
                 </div>
                 <div class="row justify-content-md-center">
-                    <input type="time"> </input>
+                    <input id="start" type="time"> </input>
                 </div>
             </div>
             <div class = "col-md-2"></div>
@@ -41,7 +41,7 @@
                         <h3>How long do you want the date to be? </h3>
                     </div>
                     <div class="row justify-content-md-center">
-                        <input type="number"> </input>
+                        <input id="length" type="number"> </input>
                     </div>
                 </div>
         </div>
