linked and added ids for buttons

--- a/assets/index.html
+++ b/assets/index.html
@@ -46,7 +46,7 @@
                 </div>
         </div>
         <div class="row justify-content-md-center">
-            <button class="btn-lg"> next</button>
+            <button id="btnIndex" class="btn-lg"> <a href="./price.html">next</a> </button>
         </div>
     </div>
 
