--- a/assets/movies.html
+++ b/assets/movies.html
@@ -46,7 +46,7 @@
                 </div>
         </div>
         <div class="row justify-content-md-center">
-            <button class="btn-lg"> finish </button>
+            <button id="btnMovies" class="btn-lg"> <a href="./results.html"> Results</a> </button>
         </div>
     </div>
 
