--- a/assets/price.html
+++ b/assets/price.html
@@ -29,29 +29,29 @@
     <!-- content box -->
         <div class="row justify-content-md-center">
             <div class="col-md-1">
-                <input type="checkbox" id="1" name="$" value="$"> 
-                    <label for="0">
+                <input type="checkbox" id="1" name="$" value="1"> 
+                    <label for="1">
                         $
                     </label> 
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="2" name="$$" value="$$"> 
-                    <label for="0">
+                <input type="checkbox" id="2" name="$$" value="2"> 
+                    <label for="2">
                         $$
                     </label> 
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="3" name="$$$" value="$$$"> 
-                    <label for="0">
+                <input type="checkbox" id="3" name="$$$" value="3"> 
+                    <label for="3">
                         $$$
                     </label> 
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="4" name="$$$$" value="$$$$"> 
-                    <label for="0">
+                <input type="checkbox" id="4" name="$$$$" value="4"> 
+                    <label for="4">
                         $$$$
                     </label> 
                 </input>
@@ -62,7 +62,7 @@
 
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <button class="btn-lg"> next</button>
+            <button id="btnPrice" class="btn-lg"><a href="./movies.html">next</a></button>
         </div>
     </div>
 
