--- a/assets/results.html
+++ b/assets/results.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="row justify-content-md-center">
-            <button class="btn-lg">Restart</button>
+            <button id="btnResults" class="btn-lg"><a href="./index.html">Restart</a></button>
         </div>
     </div>
 
