added zip code search for price page

--- a/assets/movies.html
+++ b/assets/movies.html
@@ -19,7 +19,7 @@
     <div class = "container-fluid">
             <div class="col-md-offset-1 col-md-auto">
                     <div class="row justify-content-md-center">
-                        <h3>Do you want to search by Movie Title or Theater Location? </h3>
+                        <h3>Time to pick a movie! </h3>
                     </div>
 
              </div>
