--- a/assets/price.html
+++ b/assets/price.html
@@ -22,42 +22,57 @@
     <div class = "container-fluid">
         <div class = "row justify-content-md-center">
             <h2> 
-                What's your Price Range? 
+                Start with a restaurant!
             </h2>
         </div>
 
     <!-- content box -->
         <div class="row justify-content-md-center">
-            <div class="col-md-1">
-                <input type="checkbox" id="1" name="$" value="1"> 
-                    <label for="1">
-                        $
-                    </label> 
-                </input>
+            <div class col-md-offset-1 col-md-auto>
+                <div class="row justify-content-md-center">
+                    <h3>Where do you want to go? </h3>
+                </div>
+                <div class="row justify-content-md-center">
+                    <input id="zipcode" type="number" placeholder="zip code"> </input>
+                </div>
             </div>
-            <div class="col-md-1">
-                <input type="checkbox" id="2" name="$$" value="2"> 
-                    <label for="2">
-                        $$
-                    </label> 
-                </input>
+            <div class="col-md-1"></div>
+            <div class col-md-auto>
+                <div class="row justify-content-md-center">
+                    <h3>What's your price Range? </h3>
+                </div>
+                <div class="row justify-content-md-center">
+                    <div class="col-md-auto">
+                        <input type="checkbox" id="1" name="$" value="1"> 
+                            <label for="1">
+                                $
+                            </label> 
+                        </input>
+                    </div>
+                    <div class="col-md-auto">
+                        <input type="checkbox" id="2" name="$$" value="2"> 
+                            <label for="2">
+                                $$
+                            </label> 
+                        </input>
+                    </div>
+                    <div class="col-md-auto">
+                        <input type="checkbox" id="3" name="$$$" value="3"> 
+                            <label for="3">
+                                $$$
+                            </label> 
+                        </input>
+                    </div>
+                    <div class="col-md-auto">
+                        <input type="checkbox" id="4" name="$$$$" value="4"> 
+                            <label for="4">
+                                $$$$
+                            </label> 
+                        </input>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-1">
-                <input type="checkbox" id="3" name="$$$" value="3"> 
-                    <label for="3">
-                        $$$
-                    </label> 
-                </input>
-            </div>
-            <div class="col-md-1">
-                <input type="checkbox" id="4" name="$$$$" value="4"> 
-                    <label for="4">
-                        $$$$
-                    </label> 
-                </input>
-            </div>
-        </div>
-            
+        </div>           
     </div>
 
         <!-- button to go to next page -->
