--- a/assets/price.html
+++ b/assets/price.html
@@ -14,57 +14,64 @@
 <body>
  <!-- Navbar for top -->
     <nav class="navbar sticky-top navbar-light bg-light navbar-justify-end">
-        <h1> 
+        <h1>
           Let us help you plan a great date night
         </h1>
     </nav>
     <!-- title question box  -->
     <div class = "container-fluid">
         <div class = "row justify-content-md-center">
-            <h2> 
-                What's your Price Range? 
+            <h2>
+                What's your Price Range?
             </h2>
         </div>
 
     <!-- content box -->
         <div class="row justify-content-md-center">
             <div class="col-md-1">
-                <input type="checkbox" id="1" name="$" value="1"> 
+                <input type="checkbox" id="1" name="$" value="1">
                     <label for="1">
                         $
-                    </label> 
+                    </label>
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="2" name="$$" value="2"> 
+                <input type="checkbox" id="2" name="$$" value="2">
                     <label for="2">
                         $$
-                    </label> 
+                    </label>
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="3" name="$$$" value="3"> 
+                <input type="checkbox" id="3" name="$$$" value="3">
                     <label for="3">
                         $$$
-                    </label> 
+                    </label>
                 </input>
             </div>
             <div class="col-md-1">
-                <input type="checkbox" id="4" name="$$$$" value="4"> 
+                <input type="checkbox" id="4" name="$$$$" value="4">
                     <label for="4">
                         $$$$
-                    </label> 
+                    </label>
                 </input>
             </div>
         </div>
-            
+
     </div>
 
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <button id="btnPrice" class="btn-lg"><a href="./movies.html">next</a></button>
+            <button id="btnPrice" class="btn-lg">
+                <!-- <a href="./movies.html">next</a> -->
+            </button>
         </div>
     </div>
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+<script src="./app.js"></script>
 
 </body>
 
