--- a/assets/index.html
+++ b/assets/index.html
@@ -9,20 +9,35 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+
+  <!-- css -->
+  <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+
+  <!-- font awesome -->
+  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+
 </head>
 
 <body>
  <!-- Navbar for top -->
-    <nav class="navbar sticky-top navbar-light bg-light navbar-justify-end">
-      <h1> Let us help you plan a great date night</h1>
+    <nav class="navbar sticky-top justify-content-md-center">  
+        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
     </nav>
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
+        <ol class="breadcrumb">         
+            <li class="breadcrumb-item" aria-current="page">
+                <i class="fa fa-calendar-alt"></i>
+            </li>
+        </ol>
+    </nav>
+
+  
+       <!-- title question box  -->
     <div class = "container-fluid">
         <div class = "row justify-content-md-center">
             <h2> When do you want to go on your date?</h2>
         </div>
-
-    <!-- content box -->
-
+            <!-- content  -->
         <div class="row justify-content-md-center">
             <input id="date" type="date"> </input>
         </div>
@@ -37,19 +52,37 @@
             </div>
             <div class = "col-md-2"></div>
             <div class="col-md-auto">
-                    <div class="row justify-content-md-center">
-                        <h3>How long do you want the date to be? </h3>
-                    </div>
-                    <div class="row justify-content-md-center">
-                        <input id="length" type="number"> </input>
-                    </div>
+                <div class="row justify-content-md-center">
+                    <h3>How long do you want the date to be? </h3>
                 </div>
+                <div class="row justify-content-md-center">
+                    <input id="length" type="number"> </input>
+                </div>
+            </div>
         </div>
+
+        <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <button id="btnIndex" class="btn-lg"> <a href="./price.html">next</a> </button>
+            <a href="./price.html"> 
+                <button id="btnIndex" class="btn-lg"> 
+                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
+                    </i> 
+                    <br>
+                    Next
+                </button>
+            </a> 
         </div>
     </div>
 
+<footer class = "navbar fixed-bottom justify-content-md-center">
+    <p>
+        powered by: 
+        <i class="fab fa-yelp" ></i>
+        <i class="fab fa-node" ></i>
+        <i class="fab fa-js"></i>
+        <i class="fa fa-coffee"></i>
+    </p>
+</footer>
 </body>
 
 </html>
