--- a/assets/price.html
+++ b/assets/price.html
@@ -9,24 +9,42 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+
+      <!-- font awesome -->
+  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
  <!-- Navbar for top -->
-    <nav class="navbar sticky-top navbar-light bg-light navbar-justify-end">
-        <h1> 
-          Let us help you plan a great date night
-        </h1>
+    <nav class="navbar sticky-top justify-content-md-center">  
+        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
     </nav>
-    <!-- title question box  -->
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
+        <ol class="breadcrumb">         
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="./index.html"> 
+                    <i class="fa fa-calendar-alt"></i>
+                </a>
+            </li>
+            <li class="breadcrumb-item justify-content-md-center" aria-current="page">             
+                <i class="fa fa-utensils"></i> 
+            </li>
+        </ol>
+    </nav>
+
     <div class = "container-fluid">
+
+        <!-- title question box  -->
         <div class = "row justify-content-md-center">
             <h2> 
                 Start with a restaurant!
             </h2>
         </div>
 
-    <!-- content box -->
+        <!-- content box -->
         <div class="row justify-content-md-center">
             <div class col-md-offset-1 col-md-auto>
                 <div class="row justify-content-md-center">
@@ -77,10 +95,25 @@
 
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <button id="btnPrice" class="btn-lg"><a href="./movies.html">next</a></button>
+            <a href="./movies.html"> 
+                <button id="btnIndex" class="btn-lg"> 
+                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
+                    </i> 
+                    <br>
+                    Next
+                </button>
+            </a> 
         </div>
     </div>
-
+    <footer class = "navbar fixed-bottom justify-content-md-center">
+        <p>
+            powered by: 
+            <i class="fab fa-yelp" ></i>
+            <i class="fab fa-node" ></i>
+            <i class="fab fa-js"></i>
+            <i class="fa fa-coffee"></i>
+        </p>
+    </footer>
 </body>
 
 </html>
