--- a/assets/movies.html
+++ b/assets/movies.html
@@ -11,45 +11,45 @@
         crossorigin="anonymous">
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-      <!-- font awesome -->
-  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <!-- font awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
- <!-- Navbar for top -->
-    <nav class="navbar sticky-top justify-content-md-center">  
-        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
+    <!-- Navbar for top -->
+    <nav class="navbar sticky-top justify-content-md-center">
+        <img src="./images/logo.png" alt="logo">
     </nav>
-    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
-        <ol class="breadcrumb">         
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">
-                <a href="./index.html"> 
+                <a href="./index.html">
                     <i class="fa fa-calendar-alt"></i>
                 </a>
             </li>
-            <li class="breadcrumb-item active" aria-current="page">             
-                <a href="./price.html">         
-                    <i class="fa fa-utensils"></i> 
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="./price.html">
+                    <i class="fa fa-utensils"></i>
                 </a>
             </li>
-            <li class="breadcrumb-item" aria-current="page">             
-                    <i class="fa fa-film"></i> 
-            </li>           
+            <li class="breadcrumb-item" aria-current="page">
+                <i class="fa fa-film"></i>
+            </li>
         </ol>
     </nav>
 
 
-    <div class = "container-fluid">
-                <!-- title question box  -->
+    <div class="container-fluid">
+        <!-- title question box  -->
         <div class="col-md-offset-1 col-md-auto">
             <div class="row justify-content-md-center">
                 <h3>Time to pick a movie! </h3>
             </div>
         </div>
 
-    <!-- content box -->
+        <!-- content box -->
 
         <div class="row justify-content-md-center">
             <div class="col-md-offset-1 col-md-auto">
@@ -60,7 +60,7 @@
                     <input id="title" type="text" placeholder="Movie Title"> </input>
                 </div>
             </div>
-            <div class = "col-md-2"></div>
+            <div class="col-md-2"></div>
             <div class="col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>By location </h3>
@@ -71,27 +71,29 @@
             </div>
         </div>
 
-         <!-- button to go to next page -->
+        <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <a href="./results.html"> 
-                <button id="btnIndex" class="btn-lg"> 
-                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
-                    </i> 
-                    <br>
-                    Next
+            <a href="./results.html">
+                <button id="btnIndex" class="btn-lg">
+                    <i class="fa fa-arrow-alt-circle-right justify-content-center">
+                    </i>
+                    <br> Next
                 </button>
-            </a> 
+            </a>
         </div>
     </div>
-    <footer class = "navbar fixed-bottom justify-content-md-center">
+    <footer class="navbar fixed-bottom justify-content-md-center">
         <p>
-            powered by: 
-            <i class="fab fa-yelp" ></i>
-            <i class="fab fa-node" ></i>
+            powered by:
+            <i class="fab fa-yelp"></i>
+            <i class="fab fa-node"></i>
             <i class="fab fa-js"></i>
             <i class="fa fa-coffee"></i>
         </p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
