--- a/assets/price.html
+++ b/assets/price.html
@@ -11,35 +11,35 @@
         crossorigin="anonymous">
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
-      <!-- font awesome -->
-  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <!-- font awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
- <!-- Navbar for top -->
-    <nav class="navbar sticky-top justify-content-md-center">  
-        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
+    <!-- Navbar for top -->
+    <nav class="navbar sticky-top justify-content-md-center">
+        <img src="./images/logo.png" alt="logo">
     </nav>
-    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
-        <ol class="breadcrumb">         
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">
-                <a href="./index.html"> 
+                <a href="./index.html">
                     <i class="fa fa-calendar-alt"></i>
                 </a>
             </li>
-            <li class="breadcrumb-item justify-content-md-center" aria-current="page">             
-                <i class="fa fa-utensils"></i> 
+            <li class="breadcrumb-item justify-content-md-center" aria-current="page">
+                <i class="fa fa-utensils"></i>
             </li>
         </ol>
     </nav>
 
-    <div class = "container-fluid">
+    <div class="container-fluid">
 
         <!-- title question box  -->
-        <div class = "row justify-content-md-center">
-            <h2> 
+        <div class="row justify-content-md-center">
+            <h2>
                 Start with a restaurant!
             </h2>
         </div>
@@ -51,7 +51,7 @@
                     <h3>Where do you want to go? </h3>
                 </div>
                 <div class="row justify-content-md-center">
-                    <input id="zipcode" type="number" placeholder="zip code"> </input>
+                    <input id="zipcode" type="number" placeholder="zip code" value=""> </input>
                 </div>
             </div>
             <div class="col-md-1"></div>
@@ -61,64 +61,61 @@
                 </div>
                 <div class="row justify-content-md-center">
                     <div class="col-md-auto">
-                        <input type="checkbox" id="1" name="$" value="1"> 
-                            <label for="1">
-                                $
-                            </label> 
+                        <input type="checkbox" id="1" name="$" value="1">
+                        <label for="1">
+                            $
+                        </label>
                         </input>
                     </div>
                     <div class="col-md-auto">
-                        <input type="checkbox" id="2" name="$$" value="2"> 
-                            <label for="2">
-                                $$
-                            </label> 
+                        <input type="checkbox" id="2" name="$$" value="2">
+                        <label for="2">
+                            $$
+                        </label>
                         </input>
                     </div>
                     <div class="col-md-auto">
-                        <input type="checkbox" id="3" name="$$$" value="3"> 
-                            <label for="3">
-                                $$$
-                            </label> 
+                        <input type="checkbox" id="3" name="$$$" value="3">
+                        <label for="3">
+                            $$$
+                        </label>
                         </input>
                     </div>
                     <div class="col-md-auto">
-                        <input type="checkbox" id="4" name="$$$$" value="4"> 
-                            <label for="4">
-                                $$$$
-                            </label> 
+                        <input type="checkbox" id="4" name="$$$$" value="4">
+                        <label for="4">
+                            $$$$
+                        </label>
                         </input>
                     </div>
                 </div>
             </div>
-        </div>           
-    </div>
-
-        <!-- button to go to next page -->
-        <div class="row justify-content-md-center">
-            <a href="./movies.html"> 
-                <button id="btnPrice" class="btn-lg"> 
-                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
-                    </i> 
-                    <br>
-                    Next
-                </button>
-            </a> 
         </div>
     </div>
-    <footer class = "navbar fixed-bottom justify-content-md-center">
+
+    <!-- button to go to next page -->
+    <div class="row justify-content-md-center">
+        <a href="./movies.html">
+            <button id="btnPrice" class="btn-lg">
+                <i class="fa fa-arrow-alt-circle-right justify-content-center">
+                </i>
+                <br> Next
+            </button>
+        </a>
+    </div>
+    </div>
+    <footer class="navbar fixed-bottom justify-content-md-center">
         <p>
-            powered by: 
-            <i class="fab fa-yelp" ></i>
-            <i class="fab fa-node" ></i>
+            powered by:
+            <i class="fab fa-yelp"></i>
+            <i class="fab fa-node"></i>
             <i class="fab fa-js"></i>
             <i class="fa fa-coffee"></i>
         </p>
     </footer>
-    <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-<script src="./app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 
 </body>
 
