--- a/assets/index.html
+++ b/assets/index.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
-  <!-- css -->
-  <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-  <!-- font awesome -->
-  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+    
+    <!-- font awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
  <!-- Navbar for top -->
-    <nav class="navbar sticky-top justify-content-md-center">  
-        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
-    </nav>
     <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
         <ol class="breadcrumb">         
             <li class="breadcrumb-item" aria-current="page">
@@ -31,30 +31,37 @@
         </ol>
     </nav>
 
-  
+    <div class="jumbotron justify-content-md-center">  
+            <img class ="img-fluid" src = "./images/logo.png" alt="logo"> 
+    </div>
+    
        <!-- title question box  -->
     <div class = "container-fluid">
         <div class = "row justify-content-md-center">
-            <h2> When do you want to go on your date?</h2>
+            <div class="col-md-auto title rounded">
+                <h2> When Is Your Date?</h2>
+                <hr>
+                <input id="date" type="date"> </input>
+            </div>
         </div>
-            <!-- content  -->
-        <div class="row justify-content-md-center">
-            <input id="date" type="date"> </input>
-        </div>
-        <div class="row justify-content-md-center">
-            <div class="col-md-offset-1 col-md-auto">
+
+        <!-- content  -->
+        <div class=" row justify-content-md-center">
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>What time does the date start?</h3>
                 </div>
+                <hr>
                 <div class="row justify-content-md-center">
                     <input id="start" type="time"> </input>
                 </div>
             </div>
-            <div class = "col-md-2"></div>
-            <div class="col-md-auto">
+            <div class = "col-md-1"></div>
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
-                    <h3>How long do you want the date to be? </h3>
+                    <h3>How many hours are you planning? </h3>
                 </div>
+                <hr>
                 <div class="row justify-content-md-center">
                     <input id="length" type="number"> </input>
                 </div>
@@ -64,7 +71,7 @@
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
             <a href="./price.html"> 
-                <button id="btnIndex" class="btn-lg"> 
+                <button id="btnIndex" class="btn-lg hvr-grow-shadow"> 
                     <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
                     </i> 
                     <br>
