--- a/assets/movies.html
+++ b/assets/movies.html
@@ -11,17 +11,18 @@
         crossorigin="anonymous">
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="/Users/jessica/apps/date-night-generator/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
-      <!-- font awesome -->
-  <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+    
+    <!-- font awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
  <!-- Navbar for top -->
-    <nav class="navbar sticky-top justify-content-md-center">  
-        <img src = "/Users/jessica/apps/date-night-generator/assets/images/logo.png" alt="logo"> 
-    </nav>
     <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
         <ol class="breadcrumb">         
             <li class="breadcrumb-item active" aria-current="page">
@@ -40,31 +41,36 @@
         </ol>
     </nav>
 
-
+    <div class="jumbotron justify-content-md-center">  
+            <img class ="img-fluid" src = "./images/logo.png" alt="logo"> 
+    </div>
+    
     <div class = "container-fluid">
-                <!-- title question box  -->
-        <div class="col-md-offset-1 col-md-auto">
-            <div class="row justify-content-md-center">
-                <h3>Time to pick a movie! </h3>
+        <!-- title question box  -->
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto title rounded">
+                <h2>Time To Pick A Movie! </h2>
             </div>
         </div>
 
     <!-- content box -->
 
         <div class="row justify-content-md-center">
-            <div class="col-md-offset-1 col-md-auto">
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>By Movie</h3>
                 </div>
+                <hr>
                 <div class="row justify-content-md-center">
                     <input id="title" type="text" placeholder="Movie Title"> </input>
                 </div>
             </div>
-            <div class = "col-md-2"></div>
-            <div class="col-md-auto">
+            <div class = "col-md-1"></div>
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
-                    <h3>By location </h3>
+                    <h3>By Location </h3>
                 </div>
+                <hr>
                 <div class="row justify-content-md-center">
                     <input id="zipcode" type="number" placeholder="zip code"> </input>
                 </div>
@@ -74,7 +80,7 @@
          <!-- button to go to next page -->
         <div class="row justify-content-md-center">
             <a href="./results.html"> 
-                <button id="btnIndex" class="btn-lg"> 
+                <button id="btnMovies" class="btn-lg hvr-grow-shadow"> 
                     <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
                     </i> 
                     <br>
