i changed all the things

--- a/assets/results.html
+++ b/assets/results.html
@@ -31,6 +31,24 @@
 
 <body>
  <!-- Navbar for top -->
+ <header align="center" class="rounded">
+        <video autoplay playsinline muted preload poster="./images/logoPic.png">
+        </video>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255 255">
+            <defs>
+                <mask id="mask" x="0" y="0" width="100%" height="80%" >
+                    <rect x="0" y="0" width="100%" height="69px"/>
+                    <text class="tag" x="5"  y="20"> 
+                            let us plan your perfect night out
+                        </text>
+                    <text class="logo" x="55"  y="60"> 
+                        DATE     NIGHT
+                    </text>
+                </mask>
+            </defs>
+            <rect x="0" y="-60" width="100%" height="80%" />
+        </svg>
+    </header>
 
     <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                              
         <ol class="breadcrumb">         
@@ -54,18 +72,8 @@
             </li>           
         </ol>
     </nav>
-    <div class="jumbotron justify-content-md-center">  
-            <img class ="img-fluid" src = "./images/logo.png" alt="logo"> 
-    </div>
 
     <div class = "container-fluid">
-
-        <!-- title question box  -->
-        <div class="row justify-content-md-center">
-            <div class="col-md-auto title rounded">
-                <h2> Results</h2>
-            </div>
-        </div>
 
         <!-- content box -->
         <div class="row">
@@ -75,9 +83,7 @@
                 </div>
                 <hr>
                 <div class="row justify-content-md-center">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                    <div>**This is where results live**</div>
                 </div>
             </div>
             <div class="content rounded col-md-2">
@@ -86,11 +92,10 @@
                 </div>
                 <hr>
                 <div class="row justify-content-md-center">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
+                    <div>**This is where results live**</div>
                 </div>
             </div>
+            <div class="col-md-1"></div>
             <div id="mapid"> </div>
         </div>
         
