--- a/assets/movies.html
+++ b/assets/movies.html
@@ -23,6 +23,24 @@
 
 <body>
  <!-- Navbar for top -->
+ <header align="center">
+        <video autoplay playsinline muted preload poster="./images/logoPic.png">
+        </video>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255 255">
+            <defs>
+                <mask id="mask" x="0" y="0" width="100%" height="80%" >
+                    <rect x="0" y="0" width="100%" height="69px"/>
+                    <text class="tag" x="5"  y="20"> 
+                            let us plan your perfect night out
+                        </text>
+                    <text class="logo" x="55"  y="60"> 
+                        DATE     NIGHT
+                    </text>
+                </mask>
+            </defs>
+            <rect x="0" y="-60" width="100%" height="80%" />
+        </svg>
+    </header>
     <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
         <ol class="breadcrumb">         
             <li class="breadcrumb-item active" aria-current="page">
@@ -40,18 +58,8 @@
             </li>           
         </ol>
     </nav>
-
-    <div class="jumbotron justify-content-md-center">  
-            <img class ="img-fluid" src = "./images/logo.png" alt="logo"> 
-    </div>
     
     <div class = "container-fluid">
-        <!-- title question box  -->
-        <div class="row justify-content-md-center">
-            <div class="col-md-auto title rounded">
-                <h2>Time To Pick A Movie! </h2>
-            </div>
-        </div>
 
     <!-- content box -->
 
