--- a/assets/movies.html
+++ b/assets/movies.html
@@ -74,7 +74,7 @@
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
             <a href="./results.html">
-                <button id="btnIndex" class="btn-lg">
+                <button id="btnMovies" class="btn-lg">
                     <i class="fa fa-arrow-alt-circle-right justify-content-center">
                     </i>
                     <br> Next
