--- a/assets/results.html
+++ b/assets/results.html
@@ -60,7 +60,7 @@
                     <h3>Restaurants</h3>
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div id="restaurantData" class="col-md-2"></div>
             <div class="col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>Movies </h3>
