--- a/assets/index.html
+++ b/assets/index.html
@@ -63,14 +63,14 @@
 
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <a href="./price.html"> 
+            <!-- <a href="./price.html">  -->
                 <button id="btnIndex" class="btn-lg"> 
                     <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
                     </i> 
                     <br>
                     Next
                 </button>
-            </a> 
+            <!-- </a>  -->
         </div>
     </div>
 
