Refactoring API calls

--- a/assets/movies.html
+++ b/assets/movies.html
@@ -16,33 +16,33 @@
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
-    
+
     <!-- font awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 
 <body>
- <!-- Navbar for top -->
- <header align="center">
+    <!-- Navbar for top -->
+    <header align="center">
         <video autoplay playsinline muted preload poster="./images/logoPic.png">
         </video>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255 255">
             <defs>
-                <mask id="mask" x="0" y="0" width="100%" height="80%" >
-                    <rect x="0" y="0" width="100%" height="69px"/>
-                    <text class="tag" x="5"  y="20"> 
-                            let us plan your perfect night out
-                        </text>
-                    <text class="logo" x="55"  y="60"> 
-                        DATE     NIGHT
+                <mask id="mask" x="0" y="0" width="100%" height="80%">
+                    <rect x="0" y="0" width="100%" height="69px" />
+                    <text class="tag" x="5" y="20">
+                        let us plan your perfect night out
+                    </text>
+                    <text class="logo" x="55" y="60">
+                        DATE NIGHT
                     </text>
                 </mask>
             </defs>
             <rect x="0" y="-60" width="100%" height="80%" />
         </svg>
     </header>
-    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
-        <ol class="breadcrumb">         
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">
                 <a href="./index.html">
                     <i class="fa fa-calendar-alt"></i>
@@ -58,11 +58,11 @@
             </li>
         </ol>
     </nav>
-    <div class = "container-fluid">
+    <div class="container-fluid">
 
         <!-- content box -->
 
-        <div class="row justify-content-md-center">
+        <div id="hideMe" class="row justify-content-md-center">
             <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>By Movie</h3>
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class = "col-md-1"></div>
+            <div class="col-md-1"></div>
             <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>By Location </h3>
@@ -85,15 +85,16 @@
             </div>
         </div>
 
+        <div id="resultsDiv"></div>
+
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
 
-            <a href="./results.html"> 
-                <button id="btnMovies" class="btn-lg hvr-grow-shadow"> 
-                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
-                    </i> 
-                    <br>
-                    Next
+            <a href="./results.html">
+                <button id="btnMovies" class="btn-lg hvr-grow-shadow">
+                    <i class="fa fa-arrow-alt-circle-right justify-content-center">
+                    </i>
+                    <br> Next
                 </button>
             </a>
         </div>
