--- a/assets/price.html
+++ b/assets/price.html
@@ -22,27 +22,27 @@
 
 <body>
     <!-- Navbar for top -->
-        <header align="center">
-            <video autoplay playsinline muted preload poster="./images/logoPic.png">
-            </video>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255 255">
-                <defs>
-                    <mask id="mask" x="0" y="0" width="100%" height="80%" >
-                        <rect x="0" y="0" width="100%" height="69px"/>
-                        <text class="tag" x="5"  y="20"> 
-                                let us plan your perfect night out
-                            </text>
-                        <text class="logo" x="55"  y="60"> 
-                            DATE     NIGHT
-                        </text>
-                    </mask>
-                </defs>
-                <rect x="0" y="-60" width="100%" height="80%" />
-            </svg>
-        </header>
+    <header align="center">
+        <video autoplay playsinline muted preload poster="./images/logoPic.png">
+        </video>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 255 255">
+            <defs>
+                <mask id="mask" x="0" y="0" width="100%" height="80%">
+                    <rect x="0" y="0" width="100%" height="69px" />
+                    <text class="tag" x="5" y="20">
+                        let us plan your perfect night out
+                    </text>
+                    <text class="logo" x="55" y="60">
+                        DATE NIGHT
+                    </text>
+                </mask>
+            </defs>
+            <rect x="0" y="-60" width="100%" height="80%" />
+        </svg>
+    </header>
 
-    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">                    
-        <ol class="breadcrumb">         
+    <nav class="nav sticky-top justify-content-md-center" aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item active" aria-current="page">
                 <a href="./index.html">
                     <i class="fa fa-calendar-alt"></i>
@@ -57,7 +57,7 @@
     <div class="container-fluid">
         <!-- content box -->
         <div class="row justify-content-md-center">
-            <div class= "content rounded col-md-auto" >
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>Where do you want to go? </h3>
                 </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
-            <div class= "content rounded col-md-auto">
+            <div class="content rounded col-md-auto">
                 <div class="row justify-content-md-center">
                     <h3>What's your price Range? </h3>
                 </div>
@@ -107,18 +107,17 @@
 
         <!-- button to go to next page -->
         <div class="row justify-content-md-center">
-            <a href= "./movies.html"> 
-                <button id="btnPrice" class="btn-lg hvr-grow-shadow"> 
-                    <i class="fa fa-arrow-alt-circle-right justify-content-center"> 
-                    </i> 
-                    <br>
-                    Next
+            <a href="./movies.html">
+                <button id="btnPrice" class="btn-lg hvr-grow-shadow">
+                    <i class="fa fa-arrow-alt-circle-right justify-content-center">
+                    </i>
+                    <br> Next
                 </button>
-            </a> 
+            </a>
         </div>
     </div>
 
-    <footer class = "navbar fixed-bottom justify-content-md-center">
+    <footer class="navbar fixed-bottom justify-content-md-center">
         <p>
             powered by:
             <i class="fab fa-yelp"></i>
