--- a/map.html
+++ b/map.html
@@ -20,18 +20,22 @@
     padding: 0;
   }
 </style>
+<script type="text/javascript" src="map.js"></script>
 </head>
 <body>
+    
   <h3>My Google Maps Demo</h3>
   <div id="map"></div>
 
-<script type="text/javascript" src="/Users/jessica/apps/date-night-generator/map.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZQJjiBuo7YXPpP38_ELv5bva4Bhgldqg&callback=initMap"
-async defer></script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZQJjiBuo7YXPpP38_ELv5bva4Bhgldqg&callback=initMap" async defer></script>
+
+
+
+
 </body>
 
 </html>
