it's the final countdowwwn

--- a/assets/index.html
+++ b/assets/index.html
@@ -58,16 +58,17 @@
 
         <!-- content  -->
         <div class="row justify-content-md-center">
-            <div class="col-md-auto content rounded">
+            <div class="col-md-auto content rounded animated fadeInLeft">
                 <h2> When Is Your Date?</h2>
                 <hr>
                 <div class="row justify-content-md-center">
                     <input id="date" type="date"> </input>
                 </div>
             </div>
-            <div class="content rounded col-md-auto">
+                <div class="col-md-1"></div>
+            <div class="content rounded col-md-auto  animated fadeInRight">
                 <div class="row justify-content-md-center">
-                    <h3>What time does the date start?</h3>
+                    <h3>What time is your Date?</h3>
                 </div>
                 <hr>
                 <div class="row justify-content-md-center">
@@ -87,7 +88,7 @@
         </div>
 
         <!-- button to go to next page -->
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center animated fadeInUp">
             <a href="./price.html">
                 <button id="btnIndex" class="btn-lg hvr-grow-shadow">
                     <i class="fa fa-arrow-alt-circle-right justify-content-center">
