--- a/assets/movies.html
+++ b/assets/movies.html
@@ -58,45 +58,30 @@
             </li>
         </ol>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron animated fadeIn">
         <!-- content box -->
+
+        <!-- button to go to next page -->
+        <div class="row justify-content-md-center animated bounceInDown">
+          <button id="btnMovies" class="btn-lg hvr-grow-shadow">
+              <i class="fa fa-heart justify-content-center">
+              </i>
+              <br> Click for Results!
+          </button>
+        </div>
+
         <div class="row">
             <!-- restaurant results -->
-            <div class="content rounded col-md-3">
+            <div class="contentRes rounded col-md-3">
                 <div class="row justify-content-md-center">
                     <h3>Restaurants</h3>
                 </div>
                 <hr>
-                <div id="restaurantResults" class="data">
-                    <div class="row justify-content-md-center">
-                        <div id="restaurantData" class="col-md-3"></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-7">
-                            <a href="http://www.stickyricedc.com" target="blank">
-                                <h4> Sticky Rice </h4>
-                            </a>
-                        </div>
-                        <div class="col-md-1 justify-content-md-center">
-                            <a href="https://www.yelp.com/biz/sticky-rice-washington" target="blank">
-                                <i class="fab fa-yelp"></i>
-                            </a>
-                        </div>
-                        <div class="col-md-1 justify-content-md-center">
-                            <h4> $$ </h4>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-8">
-                            <p>1224 H St NE
-                                <br> Washington, DC 20002 </p>
-                        </div>
-                    </div>
-                </div>
+                <div id="restaurantRes" class="data"> </div>
             </div>
 
             <!-- map results -->
-            <div class="content rounded col-md-4">
+            <div class="contentRes rounded col-md-4">
                 <div class="row justify-content-md-center">
                     <h3>Results Map</h3>
                 </div>
@@ -105,13 +90,13 @@
             </div>
 
             <!-- Fun activities results -->
-            <div class="content rounded col-md-3">
+            <div class="contentRes rounded col-md-3">
                 <div class="row justify-content-md-center">
                     <h3>Fun Things Nearby</h3>
                 </div>
                 <hr>
                 <div class="row justify-content-md-center">
-                    <div id="funData" class="col-md-3"></div>
+                    <div id="funData" class="data"></div>
                 </div>
             </div>
 
@@ -119,17 +104,6 @@
         </div>
         <div id="resultsDiv"></div>
 
-        <!-- button to go to next page -->
-        <div class="row justify-content-md-center">
-
-            <a href="./results.html">
-                <button id="btnMovies" class="btn-lg hvr-grow-shadow">
-                    <i class="fa fa-arrow-alt-circle-right justify-content-center">
-                    </i>
-                    <br> Get your Results!
-                </button>
-            </a>
-        </div>
     </div>
 
     <footer class="navbar fixed-bottom justify-content-md-center">
