--- a/assets/price.html
+++ b/assets/price.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
         <!-- content box -->
         <div class="row justify-content-md-center">
-            <div class="content rounded col-md-auto">
+            <div class="content rounded col-md-auto  animated fadeInLeft">
                 <div class="row justify-content-md-center">
                     <h3>Where do you want to go? </h3>
                 </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
-            <div class="content rounded col-md-auto">
+            <div class="content rounded col-md-auto  animated fadeInRight">
                 <div class="row justify-content-md-center">
                     <h3>What's your price Range? </h3>
                 </div>
@@ -106,7 +106,7 @@
         </div>
 
         <!-- button to go to next page -->
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center  animated fadeInUp">
             <a href="./movies.html">
                 <button id="btnPrice" class="btn-lg hvr-grow-shadow">
                     <i class="fa fa-arrow-alt-circle-right justify-content-center">
