--- a/assets/results.html
+++ b/assets/results.html
@@ -73,7 +73,7 @@
 
     <div class="container-fluid">
         <!-- content box -->
-        <div class="row">
+        <div class="row animated fadeIn">
             <div class="content rounded col-md-2">
                 <div class="row justify-content-md-center">
                     <h3>Restaurants</h3>
@@ -95,14 +95,14 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
-            <div> 
+            <div>
                 <h3>My Google Maps Demo</h3>
                 <div id="map"></div>
-  
+
         </div>
 
         <!-- button to go to next page -->
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center animated fadeIn">
             <a href="./index.html">
                 <button id="btnResults" class="btn-lg hvr-grow-shadow">
                     <i class="fa fa-redo justify-content-center">
